[tool.poetry]
name = "guacamole"
version = "0.1.0"
description = ""
authors = ["alex <sashason1990@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
fake-useragent = "^1.5.1"
aiohttp = "^3.9.5"
httpx = "^0.27.0"
random-username = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
